# NWC24-Manager

./: CMakeLists.txt  LICENSE  README.md  download.cpp  download.h  main.cpp  nwc24.cpp  nwc24.h  nwc24dl.cpp  nwc24dl.h  select.cpp  select.h  tui.cpp  tui.h
